fixing const name and modal appearance on mobile

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -53,8 +53,8 @@ height: 540px;
   background-color: transparent;
   background-size: contain;
   position: absolute;
-  bottom: calc(100% + 5px);
-  left: calc(100% + 5px);
+  top: -45px;
+  right: -45px;
   cursor: pointer;
   border: none;
 }
@@ -122,6 +122,7 @@ height: 540px;
     left: 19px;
     border: 1px 0px 0px 0px;
     position: fixed;
+    padding: 22px;
   }
 
   .modal__close-button {
@@ -129,7 +130,7 @@ height: 540px;
     height: 26px;
     position: absolute;
     top: -35px;
-    right: -30px;
+    right: 0px;
     rotate: -45 deg;
     padding: 0;
     margin: 0;
@@ -156,4 +157,12 @@ height: 540px;
     justify-content: center;
     top:145px;
   }
+
+  .modal__heading {
+    font-size: 18px;
+    line-height: 21.78px;
+    margin-top: 0px;
+    margin-bottom: 75px;
+    padding-bottom: 0;
+}
 }
